# pybind11_sandbox

./: .gitmodules  CMakeLists.txt  README.md  minimal_running_test.py  test.py
clic/: CMakeLists.txt
clic/includes/core/: cleBuffer.hpp  cleGPU.hpp  cleKernelList.hpp  clesperanto.hpp  clic.hpp
clic/includes/tier1/: cleAddImageAndScalarKernel.hpp
clic/src/core/: cleBuffer.cpp  cleGPU.cpp  cleKernel.cpp  clesperanto.cpp
clic/src/tier1/: cleAddImageAndScalarKernel.cpp
cmake/: SetEnv.cmake
python/: CMakeLists.txt
python/includes/: gpu.hpp  pygpu.hpp
python/src/: gpu.cpp  pydata.cpp  pygpu.cpp  pytier1.cpp  tier1.cpp
utilities/: convert_clij_to_header.py
